--- a/Connect4/.classpath
+++ b/Connect4/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="lib" path="lab7out/mysql-connector-java-5.1.40-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/steve/Desktop/Software Engineering/Lab1/Lab In 1/Project/Connect4/ocsf.jar" sourcepath="C:/Users/steve/Desktop/Software Engineering/Chapter 3 -  OCSF Framework/ocsf.jar"/>
+	<classpathentry kind="lib" path="lab7out/ocsf.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
